fixed the column alignment in hero section

--- a/styling.css
+++ b/styling.css
@@ -14,7 +14,26 @@ a {
     color: #E5E7EB;
     font-size: 18px;
 }
+
 /*Hero section*/
+
+.hero-wrapper {
+    background-color: #1F2937;
+
+
+}
+
+.hero-wrapper-second {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.hero-wrapper-second>* {
+    width: 60%;
+}
+
 .hero-container,
 footer {
     background-color: #1F2937;
@@ -29,11 +48,10 @@ footer {
 
 .logo {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     background-color: #1F2937;
-    padding: 8px;
-
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
 }
 
 .logo,
@@ -41,6 +59,7 @@ h1 {
     display: flex;
     font-size: 24px;
     color: #F9FAF8;
+
 }
 
 
@@ -73,17 +92,15 @@ a:hover {
 
 .hero {
     display: flex;
-    gap: 30px;
     align-items: center;
     background-color: #1F2937;
+    justify-content: space-between;
     height: 480px;
-    justify-content: space-around;
-
 
 }
 
 .hero>* {
-    flex-basis: 22%;
+    flex-basis: 38%;
 
 }
 
@@ -128,7 +145,7 @@ button:hover {
     align-items: center;
     height: 400px;
     gap: 30px;
-    color:#1F2937;
+    color: #1F2937;
 }
 
 .info-container {
@@ -151,8 +168,8 @@ button:hover {
 }
 
 .box>img {
-    width:200px;
-    height:200px;
+    width: 200px;
+    height: 200px;
 
 }
 
@@ -178,6 +195,7 @@ button:hover {
     justify-content: flex-end;
     width: 50%;
 }
+
 /*contact section*/
 
 .contacts {
@@ -207,6 +225,7 @@ button:hover {
     font-weight: bold;
     font-size: 20px;
 }
+
 /*footer section*/
 
 footer {
